
gttgladedir = $(datadir)/gnotime/glade

gttglade_DATA =              \
  active.glade               \
  column_menu.glade          \
  idle.glade                 \
  interval_edit.glade        \
  interval_popup.glade       \
  journal.glade              \
  not-implemented.glade      \
  notes.glade                \
  plugin.glade               \
  plugin_editor.glade        \
  prefs.glade                \
  project_properties.glade   \
  task_popup.glade           \
  task_properties.glade      \
  task_select.glade

EXTRA_DIST =          \
   $(gttglade_DATA)
