
gttgladedir = $(datadir)/gnotime/glade

gttglade_DATA =              \
  active.glade               \
  column_menu.glade          \
  idle.glade                 \
  notes.glade                \
  plugin.glade               \
  plugin_editor.glade        \
  project_properties.glade

EXTRA_DIST =          \
   $(gttglade_DATA)
